fixed closed modal covering link in min-width 600

--- a/src/components/ProjectLinks/ProjectLinks.module.css
+++ b/src/components/ProjectLinks/ProjectLinks.module.css
@@ -72,6 +72,7 @@
     flex-direction: row;
     background-color: transparent;
     padding: 0em;
+    height: 0;
   }
 
   .closeModal {
